deploy/envoy-gateway/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: porthole
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: porthole
  ports:
    - name: http
      port: 8081
      targetPort: 8081
