deploy/envoy-gateway/10-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: porthole-gateway
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "porthole.bco.runlocal.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-bco-runlocal-dev
      allowedRoutes:
        namespaces:
          from: Same
